Add customOpenApiController
