# test/Altinn.App.Api.Tests/OpenApi/swagger.json
@@ -937,7 +937,7 @@
         }
       }
     },
-    "/{org}/{app}/instances/{instanceOwnerPartyId}/{instanceGuid}/data/{dataType}": {
+    "/{org}/{app}/instances/{instanceOwnerPartyId}/{instanceGuid}/data/type/{dataType}": {
       "post": {
         "tags": [
           "Data"
@@ -1168,6 +1168,15 @@
             }
           },
           {
+            "name": "dataType",
+            "in": "path",
+            "description": "Optional parameter, verified if pressent. Used to have different schemas for different data types in openApi spec",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
             "name": "includeRowId",
             "in": "query",
             "description": "Whether to initialize or remove AltinnRowId fields in the model",
@@ -1243,6 +1252,15 @@
             "schema": {
               "type": "string",
               "format": "uuid"
+            }
+          },
+          {
+            "name": "dataType",
+            "in": "path",
+            "description": "Optional parameter, verified if pressent. Used to have different schemas for different data types in openApi spec,",
+            "required": true,
+            "schema": {
+              "type": "string"
             }
           },
           {
@@ -1526,6 +1544,15 @@
             "schema": {
               "type": "string",
               "format": "uuid"
+            }
+          },
+          {
+            "name": "dataType",
+            "in": "path",
+            "description": "Optional parameter, verified if pressent. Used to have different schemas for different data types in openApi spec,",
+            "required": true,
+            "schema": {
+              "type": "string"
             }
           },
           {
